[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entry_Editor/Bingo_Listen_Editor.gd" type="Script" id=1]
[ext_resource path="res://Entry_Editor/List_Entry.tscn" type="PackedScene" id=2]

[node name="PanelContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
List_Element = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 24.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 986.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Bingo Text"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 990.0
margin_right = 1010.0
margin_bottom = 24.0
text = "+"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1010.0
margin_bottom = 32.0

[node name="Entries" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 1010.0
margin_bottom = 568.0
size_flags_vertical = 3

[node name="Error_Label" type="Label" parent="VBoxContainer"]
margin_top = 572.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_vertical = 12
custom_colors/font_color = Color( 0.52549, 0.0941176, 0.0941176, 1 )
align = 1
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
